source/objects/main/default/objects/Territory__c/fields/isForAssortmentUpdate__c.field-meta.xml
<CustomField>
    <fullName>isForAssortmentUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Обновлять матрицы</label>
    <type>Checkbox</type>
</CustomField>