source/objects/main/default/objects/Territory__c/fields/isReturnEnable__c.field-meta.xml
<CustomField>
    <fullName>isReturnEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Возвраты разрешены</label>
    <type>Checkbox</type>
</CustomField>