source/objects/main/default/objects/Territory__c/fields/MoveTime__c.field-meta.xml
<CustomField>
    <fullName>MoveTime__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Значение по умолчанию: 55</description>
    <label>Время на переезд (Мин)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>