source/objects/main/default/objects/Territory__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Привязка к территориальной иерархии (SALES GROUP &gt; BU &gt; REGION)</description>
    <label>Родительская Территория</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Дочерние Территории</relationshipLabel>
    <relationshipName>ChildTerritories</relationshipName>
    <type>Lookup</type>
</CustomField>