source/objects/main/default/objects/Territory__c/fields/SapId__c.field-meta.xml
<CustomField>
    <fullName>SapId__c</fullName>
    <description>Unique, External ID</description>
    <externalId>true</externalId>
    <label>SAP_Код</label>
    <length>249</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>