source/objects/main/default/objects/Territory__c/recordTypes/SalesGroup.recordType-meta.xml
<RecordType>
    <fullName>SalesGroup</fullName>
    <active>true</active>
    <label>Sales Group</label>
</RecordType>